[metadata]
name = quest
author = Dharhas Pothina
author_email = dharhas.pothina@erdc.dren.mil
summary = Environmental Simulator Data Services Interpolation Web Services
description-file = README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test=pytest

[tool:pytest]
addopts = test -s -vv

[extras]
docs =
    sphinx
    sphinx_rtd_theme
tests =
    pytest

[entry_points]
console_scripts =
    quest-get-elevations = quest.scripts.get_elevations:cli

quest.services =
    user = quest.services.user_provider:UserProvider
    noaa-coast = quest.services.noaa_coastwatch:NoaaProvider
    noaa-ncdc = quest.services.noaa_ncdc:NcdcProvider
    usgs-nwis = quest.services.usgs_nwis:NwisProvider
    usgs-ned = quest.services.usgs_ned:UsgsNedProvider
    usgs-nlcd = quest.services.usgs_nlcd:UsgsNlcdProvider
    cuahsi-hydroshare = quest.services.cuahsi_hs:HSProvider
    kitware-girder = quest.services.kitware_girder:GirderProvider
    # nasa = quest.services.nasa:NasaProvider

quest.filters =
    ts-unit-conversion = quest.filters.timeseries.timeseries:TsUnitConversion
    ts-resample = quest.filters.timeseries.timeseries:TsResample
    ts-remove-outliers = quest.filters.timeseries.timeseries:TsRemoveOutliers
    ts-flow-duration = quest.filters.timeseries.ts_flow_duration:TsFlowDuration
    #raster-clip = quest.filters.raster.raster:RasterClip
    raster-unit-conversion = quest.filters.raster.raster:RstUnitConversion
    raster-watershed-delineation = quest.filters.raster.rst_watershed:RstWatershedDelineation
    raster-flow-accumulation = quest.filters.raster.rst_watershed:RstFlowAccumulation
    raster-fill = quest.filters.raster.rst_watershed:RstFill
    raster-merge = quest.filters.raster.rst_merge:RstMerge
    raster-reprojection = quest.filters.raster.rst_reprojection:RstReprojection
    raster-watershed-snap-outlet = quest.filters.raster.rst_watershed:RstSnapOutlet

quest.io =
    timeseries-hdf5 = quest.io.timeseries_hdf5:TsHdf5
    raster-gdal = quest.io.raster_gdal:RasterGdal
    xyHdf5 = quest.io.xyHdf5:XYHdf5
    generic = quest.io.xyHdf5:XYHdf5
