[metadata]
name = quest
author = Dharhas Pothina
author_email = dharhas.pothina@erdc.dren.mil
summary = Environmental Simulator Data Services Interpolation Web Services
description-file = README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test=pytest

[extras]
docs =
    sphinx
    sphinx_rtd_theme
tests =
    pytest

[files]
packages =
    quest
    quest_provider_plugins
    quest_tool_plugins
    quest_io_plugins
