[metadata]
name = erdc-quest
author = Dharhas Pothina, Scott Christensen, Aaron Valoroso
author_email = dharhas.pothina@usace.army.mil
maintainer = Aaron Valoroso
maintainer_email = aaron.a.valoroso@usace.army.mil
url = https://github.com/erdc/quest
summary = Extensible API for downloading and managing data
description-file = README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[aliases]
test=pytest

[extras]
docs =
    sphinx
    sphinx_rtd_theme
    pbr
    appdirs
tests =
    pytest

[files]
packages =
    quest
    quest_provider_plugins
    quest_tool_plugins
    quest_io_plugins
